--- a/lists_conversion_experience.rmd
+++ b/lists_conversion_experience.rmd
@@ -1,9 +1,9 @@
 ---
-title: "An Example Using the Tufte Style"
-author: "John Smith"
+title: "'Have you forgotten?' Conversion experiences in list worlds"
+author: "Adrian Mackenzie"
 output:
-  tufte::tufte_handout: default
-tufte::tufte_html: default
+    tufte::tufte_handout: default
+    tufte::tufte_html: default
 ---
 
 # 'Have you forgotten?' Conversion experiences in list worlds
@@ -11,8 +11,9 @@ tufte::tufte_html: default
 ```{r setup, cache=FALSE, include=FALSE}
 library(knitr)
 output <- opts_knit$get("rmarkdown.pandoc.to")
-opts_chunk$set(warnings=FALSE)
-opts_chunk$set(messages=FALSE)
+opts_chunk$set(warning=FALSE)
+opts_chunk$set(message=FALSE)
+opts_chunk$set(error=TRUE)
 ```
 
 ## Introduction: the presentation of a presentation
@@ -26,7 +27,6 @@ The items on this list are recommendations. They are only a few of them: five. T
 Shopping lists are quite prosaic -- a dozen lines scrawled on the back of a used envelope stuck on the refrigerator door  -- and sublime -- a million products ranked in some kind of order for tens or hundreds of millions of people. I regard the list of five suggestions show to Tesco's online customers at the checkout as symptomatic of a major contemporary form of ordering, the recommendation list, that we see in many  forms of news, media, entertainment, marketing, advertising. 
 
 In this respect, the presentation was not really surprising or exceptional. The ordinariness and prosaic character of grocery shopping stands out as the most significant feature.  The presentation itself is a working example for an argument about our experience of predictive ordering. In this paper, I re-present the presentation using a mixture of theoretical and practical resources. The theory is largely recent media theory and its accounts of prediction in media. The practical resources are that of coding and predictive models.  
-
 
 The problem of incomplete lists reminds me of the game 'I went shopping and I bought ... ' that adults sometimes play with children.  The game is about remembering a well-ordered list of items - 'a' is apple, 'b' is for banana, 'c' is for carrot.  The point of the game is to use the well-ordered set of labels provided by the sequence of letters in the alphabet to remember a random and perhaps very diverse list of items. The longer the game continues, the harder it is to remember since the shopping list grows longer. At the same time, each player repeats the list, and this  helps memorisation. One trick in playing this game is to choose items that are quite unexpected or increasingly random. Rather than `ham`, list `halva`; rather than `fish`, add `face cream.` This is especially useful for adults in beating children. The children have better memories for items they know, but adults know more unexpected items. On the other hand, very unexpected items are quite easy to remember and tend to even the score in the favour of the children. Balancing between the improbable and memorable, between a predictable list like 'apples, bananas, carrots' and an unusual list such as 'agave syrup, boccadilla, cilantro' is complicated. Something similar applies to recommendation systems. The system can remember very many things. It may know everything you bought in the last few years on that site, and it can easily see what you would normally buy and add those as suggestions.
 
